--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -1,5 +1,24 @@
 <html>
     <head>
-        <meta ch
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>website</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device=width, initial-scale=1">
+        <link rel="stylesheet" href="">
     </head>
+    <body>
+        <h1> welcome to the backend test</h1>
+        <button type="submit"><a href="{% url 'signup' %}">Signup</a></button>
+        <button type="submit"><a href="">Signin</a></button>
+        <button type="submit"><a href="">Signout</a></button>
+
+        <br>
+
+        <script src="" async defer></script>
+         <br>
+        {% block content %}
+
+        {% endblock %}
+    </body>
 </html>
